Bug 1645524 - Correctly set the return value of gfxDWriteFontList::ReadFaceNames to support src:local(...) face search. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D79564